@@ -8,58 +8,30 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.core.context.SecurityContextHolder;
 import sgc.mapa.model.Atividade;
 import sgc.mapa.model.Mapa;
-import sgc.mapa.service.AtividadeService;
-import sgc.mapa.service.CompetenciaService;
-import sgc.mapa.service.MapaService;
-import sgc.subprocesso.dto.*;
-import sgc.subprocesso.mapper.SubprocessoDetalheMapper;
-import sgc.subprocesso.mapper.SubprocessoMapper;
-import sgc.subprocesso.model.MovimentacaoRepo;
-import sgc.subprocesso.model.Subprocesso;
-import sgc.subprocesso.model.SubprocessoRepo;
 import sgc.organizacao.UsuarioService;
 import sgc.organizacao.model.Perfil;
 import sgc.organizacao.model.Usuario;
-import sgc.subprocesso.service.decomposed.*;
+import sgc.subprocesso.dto.*;
+import sgc.subprocesso.model.Subprocesso;
+import sgc.subprocesso.service.decomposed.SubprocessoCrudService;
+import sgc.subprocesso.service.decomposed.SubprocessoDetalheService;
+import sgc.subprocesso.service.decomposed.SubprocessoValidacaoService;
+import sgc.subprocesso.service.decomposed.SubprocessoWorkflowService;
 
+import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("Testes Unitários para SubprocessoService")
+@DisplayName("SubprocessoService")
 class SubprocessoServiceTest {
-
-    @Mock
-    private SubprocessoRepo repositorioSubprocesso;
-    @Mock
-    private AtividadeService atividadeService;
-    @Mock
-    private CompetenciaService competenciaService;
-    @Mock
-    private SubprocessoMapper subprocessoMapper;
-    @Mock
-    private MapaService mapaService;
-    @Mock
-    private MovimentacaoRepo repositorioMovimentacao;
     @Mock
     private UsuarioService usuarioService;
-    @Mock
-    private SubprocessoPermissoesService subprocessoPermissoesService;
-    @Mock
-    private SubprocessoDetalheMapper subprocessoDetalheMapper;
-    @Mock
-    private sgc.subprocesso.mapper.MapaAjusteMapper mapaAjusteMapper;
-    @Mock
-    private sgc.analise.AnaliseService analiseService;
-
-    // Decomposed services mocks
     @Mock
     private SubprocessoCrudService crudService;
     @Mock
@@ -72,17 +44,10 @@ class SubprocessoServiceTest {
     @InjectMocks
     private SubprocessoService service;
 
-    private void mockSecurityContext(String username) {
-        Authentication authentication = mock(Authentication.class);
-        when(authentication.getName()).thenReturn(username);
-        SecurityContext securityContext = mock(SecurityContext.class);
-        when(securityContext.getAuthentication()).thenReturn(authentication);
-        SecurityContextHolder.setContext(securityContext);
-    }
+
 
     @AfterEach
     void tearDown() {
-        SecurityContextHolder.clearContext();
     }
 
     @Nested
@@ -115,14 +80,14 @@ class SubprocessoServiceTest {
             List<AtividadeVisualizacaoDto> result = service.listarAtividadesSubprocesso(1L);
 
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getDescricao()).isEqualTo("Atividade Teste");
+            assertThat(result.getFirst().getDescricao()).isEqualTo("Atividade Teste");
         }
 
         @Test
         @DisplayName("Deve retornar situação quando subprocesso existe")
         void deveRetornarSituacaoQuandoSubprocessoExiste() {
             when(crudService.obterStatus(1L)).thenReturn(SubprocessoSituacaoDto.builder().build());
-            assertThat(service.obterStatus(1L)).isNotNull();
+            assertThat(service.obterSituacao(1L)).isNotNull();
         }
 
         @Test
@@ -201,13 +166,6 @@ class SubprocessoServiceTest {
     @DisplayName("Cenários de Validação")
     class ValidacaoTests {
         @Test
-        @DisplayName("Deve validar permissão de edição do mapa - Sucesso")
-        void deveValidarPermissaoEdicaoMapaSucesso() {
-            service.validarPermissaoEdicaoMapa(100L, "user");
-            verify(validacaoService).validarPermissaoEdicaoMapa(100L, "user");
-        }
-
-        @Test
         @DisplayName("Deve validar existência de atividades - Sucesso")
         void deveValidarExistenciaAtividadesSucesso() {
             service.validarExistenciaAtividades(1L);
@@ -245,7 +203,7 @@ class SubprocessoServiceTest {
         @Test
         @DisplayName("Deve alterar data limite")
         void deveAlterarDataLimite() {
-            java.time.LocalDate novaData = java.time.LocalDate.now();
+            LocalDate novaData = java.time.LocalDate.now();
             service.alterarDataLimite(1L, novaData);
             verify(workflowService).alterarDataLimite(1L, novaData);
         }
@@ -272,23 +230,21 @@ class SubprocessoServiceTest {
         @Test
         @DisplayName("obterDetalhes sucesso")
         void obterDetalhesSucesso() {
-            mockSecurityContext("admin");
             Usuario admin = new Usuario();
-            when(usuarioService.buscarUsuarioPorLogin("admin")).thenReturn(admin);
+            when(usuarioService.obterUsuarioAutenticado()).thenReturn(admin);
 
-            when(detalheService.obterDetalhes(1L, Perfil.ADMIN, null, admin))
+            when(detalheService.obterDetalhes(1L, Perfil.ADMIN, admin))
                     .thenReturn(SubprocessoDetalheDto.builder().build());
 
-            SubprocessoDetalheDto result = service.obterDetalhes(1L, Perfil.ADMIN, null);
+            SubprocessoDetalheDto result = service.obterDetalhes(1L, Perfil.ADMIN);
             assertThat(result).isNotNull();
         }
 
         @Test
         @DisplayName("obterPermissoes")
         void obterPermissoes() {
-            mockSecurityContext("user");
             Usuario user = new Usuario();
-            when(usuarioService.buscarUsuarioPorLogin("user")).thenReturn(user);
+            when(usuarioService.obterUsuarioAutenticado()).thenReturn(user);
 
             when(detalheService.obterPermissoes(1L, user))
                     .thenReturn(SubprocessoPermissoesDto.builder().build());
@@ -300,23 +256,22 @@ class SubprocessoServiceTest {
         @Test
         @DisplayName("obterPermissoes lança exceção quando não autenticado")
         void obterPermissoesSemAutenticacao() {
-            SecurityContextHolder.clearContext();
+            when(usuarioService.obterUsuarioAutenticado())
+                    .thenThrow(new sgc.comum.erros.ErroAccessoNegado("Nenhum usuário autenticado"));
+
             org.junit.jupiter.api.Assertions.assertThrows(sgc.comum.erros.ErroAccessoNegado.class, () ->
-                service.obterPermissoes(1L)
+                    service.obterPermissoes(1L)
             );
         }
 
         @Test
         @DisplayName("obterPermissoes lança exceção quando autenticação não tem nome")
         void obterPermissoesComAutenticacaoSemNome() {
-            Authentication authentication = mock(Authentication.class);
-            when(authentication.getName()).thenReturn(null);
-            SecurityContext securityContext = mock(SecurityContext.class);
-            when(securityContext.getAuthentication()).thenReturn(authentication);
-            SecurityContextHolder.setContext(securityContext);
+            when(usuarioService.obterUsuarioAutenticado())
+                    .thenThrow(new sgc.comum.erros.ErroAccessoNegado("Usuário sem nome"));
 
             org.junit.jupiter.api.Assertions.assertThrows(sgc.comum.erros.ErroAccessoNegado.class, () ->
-                service.obterPermissoes(1L)
+                    service.obterPermissoes(1L)
             );
         }
     }
